kube/chromium.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: chromium
  name: chromium
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chromium
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chromium
    spec:
      containers:
      - image: gcr.io/focused-album-308314/chromium:latest
        imagePullPolicy: Always
        name: chromium
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports: 
        - containerPort: 9222
        args: ["$(SPECIAL_ARG_VAL)"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: chromium
spec:
  selector:
    app: chromium
  ports:
    - protocol: TCP
      port: 9222
      targetPort: 9222
  type: NodePort
