kube/docmachine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: docmachine
  name: docmachine
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmachine
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: docmachine
    spec:
      containers:
      - image: gcr.io/focused-album-308314/doc-machine-frontend:latest
        imagePullPolicy: Always
        name: doc-machine-frontend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports: 
        - containerPort: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: docmachine-service
spec:
  selector:
    app: docmachine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
