kube/docmachinebackendbeta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: docmachinebackendbeta
  name: docmachinebackendbeta
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmachinebackendbeta
  template:
    metadata:
      labels:
        app: docmachinebackendbeta
    spec:
      containers:
      - image: gcr.io/focused-album-308314/doc-machine-backend:v1.9.1
        imagePullPolicy: Always
        name: doc-machine-backend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports: 
        - containerPort: 3000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docmachinebackendbeta
  name: docmachinebackendbeta
  namespace: default
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3000
    nodePort: 30002
  selector:
    app: docmachinebackendbeta
  sessionAffinity: None
  type: NodePort
